# docx-formatter

./: .dockerignore  .gitignore  ARCHITECTURE_PLAN.md  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  setup.sh
docs/: intelligent-docx-formatting-architecture.md  refactoring-progress.md
engine/: Cargo.toml
engine/src/: assembler.rs  lib.rs  models.rs  parser.rs  py_bindings.rs  xml_utils.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ClassificationTable.tsx  DocxPreview.tsx  FileUpload.tsx  Layout.tsx  ProgressBar.tsx
frontend/src/hooks/: useAuth.ts  useFormatSession.tsx  useHistory.ts  useTaskPolling.ts
frontend/src/pages/: Admin.tsx  Batch.tsx  History.tsx  Home.tsx  Login.tsx  Templates.tsx
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
python/: requirements.txt
python/app/: config.py  db.py  models.py
python/app/api/: admin.py  batch.py  main.py  redeem.py  templates.py
python/app/core/: batch.py  classifier.py  confirmation.py  cover_engine.py  layout_planner.py  llm_client.py  pipeline.py  redeem.py  renderer.py  repair_engine.py  rule_extractor.py  style_registry.py  template_analyzer.py  trace.py  validator.py
python/static/: index.html
