[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "docx-formatter"
version = "0.2.0"
description = "Automated document formatting — Rust + Python hybrid"
requires-python = ">=3.11"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "docx_fmt_core"
manifest-path = "engine/Cargo.toml"
