[package]
name = "docx-fmt-core"
version = "0.1.0"
edition = "2021"
description = "High-performance docx formatting engine — Rust core with Python bindings"

[lib]
name = "docx_fmt_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
quick-xml = "0.36"
zip = "0.6"
zip-extensions = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
thiserror = "1"
log = "0.4"
image = "0.25"
base64 = "0.22"
tempfile = "3"

[dependencies.pyo3]
version = "0.22"
features = ["extension-module"]

[features]
default = ["python"]
python = []

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
